name:                circlehs
version:             0.0.1

synopsis:            The CircleCI REST API for Haskell
description:         The CircleCI REST API implementation in Haskell.
                     For more info please see <https://circleci.com/docs/api/ official API reference>.

homepage:            https://github.com/denisshevchenko/circlehs
bug-reports:         https://github.com/denisshevchenko/circlehs/issues

stability:           alpha

license:             MIT
license-file:        LICENSE

author:              Denis Shevchenko
maintainer:          me@dshevchenko.biz
copyright:           2016 Denis Shevchenko

category:            API, Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

tested-with:         GHC == 7.10.2, GHC == 7.10.3

library
  hs-source-dirs:       src

  exposed-modules:        CircleCI
                        -- API
                        , CircleCI.User
                        , CircleCI.Project
                        , CircleCI.Build.Info
                        , CircleCI.CheckoutKey
                        , CircleCI.Environment
                        , CircleCI.Cache
                        -- Commonly used stuff.
                        , CircleCI.Common.Types
                        , CircleCI.Common.Run

  other-modules:          CircleCI.Common.HTTPS
                        , CircleCI.Common.URL

  build-depends:          base                  >= 4.7      && < 5
                        , text                  >= 1.2.2.1  && < 2
                        , aeson                 >= 0.9.0.1  && < 0.12
                        , unordered-containers  >= 0.2.5.1  && < 0.3
                        , servant               >= 0.7      && < 0.9
                        , servant-client        >= 0.7      && < 0.9
                        , time                  >= 1.4.1.1  && < 1.7
                        , mtl                   >= 2.2.1    && < 2.3
                        , transformers          >= 0.4.2.0  && < 0.6
                        , http-client           >= 0.4.24   && < 0.5
                        , http-client-tls       >= 0.2.2    && < 0.5

  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-binds

source-repository head
  type:     git
  location: https://github.com/denisshevchenko/circlehs.git
